--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <base href="/pokemon-trainer/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" href="styles.ef46db3751d8e999.css"></head>
+<style>body{padding:0;margin:0}</style><link rel="stylesheet" href="styles.f4fb4e95192ab772.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.f4fb4e95192ab772.css"></noscript></head>
 <body>
   <app-root></app-root>
-<script src="runtime.495b17b3017a9def.js" type="module"></script><script src="polyfills.aeaaef0f5bfd9c0a.js" type="module"></script><script src="main.76670b4bd965152a.js" type="module"></script>
+<script src="runtime.495b17b3017a9def.js" type="module"></script><script src="polyfills.aeaaef0f5bfd9c0a.js" type="module"></script><script src="main.0ade1a8ef32885df.js" type="module"></script>
 
 </body></html>
